# automation_exercise

./: .gitignore  README.md  pyproject.toml
resources/schemas/: schema_get_user_account_detail.json  schema_post_search_product.json
resources/shemas/: shema_get_brands_list.json
src/automation_exercise/: app.py
src/automation_exercise/API/: automation_exercise_api.py  delete_request.py  get_request.py  post_request.py  put_request.py
src/automation_exercise/data/: product_card.py  products.py  user.py
src/automation_exercise/page_objects/: cart_page_object.py  checkout_page_object.py  contact_us_page_object.py  footer_page_object.py  home_page_object.py  main_page.py  navigation_bar.py  navigation_bar_object.py  payment_page_object.py  product_detail_page_object.py  products_page_object.py  signup_login_page_object.py  stable_pages_object.py  user_account_page.py
src/automation_exercise/utils/: attachments.py  base_test_request.py  check_functions.py  helpers.py  paths.py  static_values.py
src/ozon/page_objects/: main_page.py
tests/: check.py  conftest.py  test_available.py  test_contact_us.py  test_user_login.py  test_user_registration.py
tests/test_API/: test_delete_requests.py  test_get_requests.py  test_post_requests.py  test_put_requests.py
tests/test_UI/: test_cart_page.py  test_contact_us.py  test_home_page.py  test_place_order.py  test_product_page.py  test_user_login.py  test_user_registration.py
